--- a/Site/package.json
+++ b/Site/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Feito pelos desenvolvedores @ Bandtec Digital School",
+  "author": "Modificado por Matheus Ferreira Matos - ADS-A 2021-2",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
